# doboku-post

./: .gitignore  .gitignore 2  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
.circleci/: config.yml
.github/workflows/: deploy.yml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20200622_2326.py
apiv1/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py  widgets.py
apiv1/migrations/: 0001_initial.py  0002_auto_20200805_2014.py  (+3 more)
backend/: Dockerfile  pyproject.toml  uwsgi.ini
backend/accounts/: admin.py  models.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0003_auto_20200710_0157.py
backend/apiv1/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apiv1/migrations/: 0001_initial.py  0003_auto_20200806_1933.py  0004_post_location.py  0005_auto_20200808_2353.py  0006_post_address.py  0009_auto_20200810_1300.py  0010_auto_20200810_1304.py  0011_auto_20200812_2340.py
backend/apiv1/tests/: test_serializers.py  test_views.py
backend/config/: settings.py  storage_backends.py  urls.py  wsgi.py
backend/config/settings/: circleci.py  local.py  product.py
backend/static/css/: style.css
backend/templates/: index.html
config/: settings.py  urls.py
frontend/: .env.development  .env.production  .eslintrc.js  .gitignore  Dockerfile  package-lock.json  package.json  vue.config.js
nginx/: Dockerfile
sns/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py  widgets.py
templates/: base.html
(+104 files in other folders)
